--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div>
                         <img src="./img2/دجاج_مشوي-removebg-preview.png" alt="دجاج مشوي">
                         <div>
-                            <h3>دجاج مشوي</h3>
+                            <h3>دجاج مشوي<p>1.700 KG</p></h3>
                             <p>المكونات : صدور الدجاج , ملح الطعام , فلفل أسود , زيت نباتي</p>
                             <p><del>SP 200.000</del> <span class="primary-text"><br>SP 135.000</span></p>
                         </div>
@@ -105,14 +105,14 @@
                         <div class="menu-item">
                             <img src="./img2/شقف-removebg-preview.png" alt="شقف">
                             <div>
-                                <h3>شقف <span class="primary-text">SP 125.000</span></h3>
+                                <h3>شقف <span class="primary-text">SP 230.000</span></h3>
                                 <p>المكونات : لحم ، زيت زيتون ، فلفل اسود، بهارات المشاوي، خل ، ملح الطعام</p>
                             </div>
                         </div>
                         <div class="menu-item">
                             <img src="./img2/كباب.jpg" alt="كباب">
                             <div>
-                                <h3>كباب<span class="primary-text">SP 125.000</span></h3>
+                                <h3>كباب<span class="primary-text">SP 230.000</span></h3>
                                 <p>المكونات : لحم مفروم ، بصل مفروم ، بهارات مشكلة ، بقدونس مفروم ، ملح </p>
                             </div>
                         </div>
@@ -170,7 +170,7 @@
                         <div class="menu-item">
                             <img src="./img2/كبة برك.jpg" alt="كبة برك">
                             <div>
-                                <h3>كبة <span class="primary-text">SP 90.000</span></h3>
+                                <h3>كبة <span class="primary-text">SP 9.000 للقطعة الواحدة</span></h3>
                                 <p>المكونات : لحم ، بهار اللحم ، بقدونس مفروم ، فلفل اسود ، ملح طعام ، بصل</p>
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                         <div class="menu-item">
                             <img src="./img2/مندي.jpg" alt="مندي">
                             <div>
-                                <h3>مندي <span class="primary-text">SP 140.000</span></h3>
+                                <h3>مندي <span class="primary-text">SP 240.000</span></h3>
                                 <p>المكونات : دجاج ، ليمون ، زيت زيتون ، كمون ، كزبرة ، كركم ، فلفل اسود</p>
                             </div>
                         </div>
@@ -235,14 +235,14 @@
                     <div class="contact-info">
                         <div>
                             <h3>ADDRESS</h3>
-                            <p><i class="fa-solid fa-location-dot"></i> Al fawar, jableh, Syria</p>
+                            <p><i class="fa-solid fa-location-dot"></i>Behind Waheeb Issa School, Al fawar, jableh, Syria</p>
                             <p><i class="fa-solid fa-phone"></i> Phone: +963997519877</p>
                             <p><i class="fa-regular fa-envelope"></i> waseemnassour@windwslive.com</p>
                         </div>
                         <div>
                             <h3>WORKING HOURS</h3>
-                            <p>9:00 am to 12:00 pm on Weekdays</p>
-                            <p>10:00 am to 1:00 Am on Weekends</p>
+                            <p>12:00 pm to 2:00 am on Weekdays</p>
+                            <p>12:00 pm to 3:00 am on Weekends</p>
                         </div>
                         <div>
                             <h3>FOLLOW US</h3>
