--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="container">
                 <div class="title">
                     <h2>Our Special Menu</h2>
-                    <p>Order two and get third for free</p>
+                    <p>Learn about some of the dishes we offer</p>
                 </div>
                 <div class="menu-items">
                     <div class="menu-items-left">
@@ -119,7 +119,7 @@
                         <div class="menu-item">
                             <img src="./img2/شيش_طاووق-removebg-preview.png" alt="شيش طاووق">
                             <div>
-                                <h3>شيش طاووق<span class="primary-text">SP 130.000</span></h3>
+                                <h3>شيش طاووق<span class="primary-text">SP130.000</span></h3>
                                 <p>المكونات : صدور دجاج ، زيت نباتي ، ثوم مفروم ، صلصة طماطم ، ملح</p>
                             </div>
                         </div>
@@ -170,7 +170,7 @@
                         <div class="menu-item">
                             <img src="./img2/كبة برك.jpg" alt="كبة برك">
                             <div>
-                                <h3>كبة <span class="primary-text">SP 9.000 للقطعة الواحدة</span></h3>
+                                <h3>كبة <span class="primary-text"> للقطعة الواحدة SP 9.000</span></h3>
                                 <p>المكونات : لحم ، بهار اللحم ، بقدونس مفروم ، فلفل اسود ، ملح طعام ، بصل</p>
                             </div>
                         </div>
@@ -199,24 +199,24 @@
             <div class="container">
                 <div class="daytime-items">
                     <div class="daytime-item">
-                        <img src="./img/breckfastIcon.png" alt="Breakfast">
-                        <h3>Breakfast</h3>
-                        <p>8:00 am to 10:00 am</p>
+                        <img src="img2/مشروب-removebg-preview.png" alt="Drinks">
+                        <h3>Drinks</h3>
+                        <p>All the time</p>
                     </div>
                     <div class="daytime-item">
                         <img src="./img/lunchIcon.png" alt="Lunch">
                         <h3>Lunch</h3>
-                        <p>4:00 pm to 7:00 pm</p>
+                        <p>12:00 pm to 7:00 pm</p>
                     </div>
                     <div class="daytime-item">
                         <img src="./img/dinnerIcon.png" alt="Dinner">
                         <h3>Dinner</h3>
-                        <p>9:00 pm to 1:00 Am</p>
+                        <p>7:00 pm to 2:00 Am</p>
                     </div>
                     <div class="daytime-item">
-                        <img src="./img/dessertIcon.png" alt="dessert">
-                        <h3>Dessert</h3>
-                        <p>All day</p>
+                        <img src="img2/OIP-removebg-preview.png" alt="hookah">
+                        <h3>hookah</h3>
+                        <p>All the time</p>
                     </div>
                 </div>
             </div>
@@ -247,7 +247,7 @@
                         <div>
                             <h3>FOLLOW US</h3>
                             <a href="https://www.facebook.com/profile.php?id=61554518921581&mibextid=JRoKGi"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="https://wa.me/+96397519877"><i class="fa-brands fa-whatsapp"></i></a>
+                            <a href="https://wa.me/+963997519877"><i class="fa-brands fa-whatsapp"></i></a>
                        
                         </div>
                     </div>
@@ -264,7 +264,7 @@
         <!-- Contact Section End -->
     </main>
     <footer id="footer">
-        <p>Copyright &copy; 2023 All rights reserved | made by <b> <a href="https://www.facebook.com/profile.php?id=100011829900745&mibextid=JRoKGi"
+        <p>Copyright &copy; 2024 All rights reserved | made by <b> <a href="https://www.facebook.com/profile.php?id=100011829900745&mibextid=JRoKGi"
                     target="_blank">EN.MAHER HUSSEN</a> </b></p>
     </footer>
 </body>
