--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 </div>
                 <div class="about-content">
                     <div>
-                        <p>Al Sharq Restaurant mixes the nobility and culture of oriental cuisine and the modernity of Western cuisine in distinctive meals and sweets, and conveys the Levantine atmosphere in parties, holidays and events You can visit us and experience the most delicious types of drinks and Western cuisine, we are honored to visit you.</p>
-                        <p>We have an integrated staff that serves you all the time with the presence of classical and quiet music, we are distinguished in the accuracy of our work and the speed of completion with five stars</p>
+                        <p>Al Sharq Restaurant mixes the nobility and culture of oriental cuisine and modernity in distinctive meals and desserts, and conveys the wonderful atmosphere in parties, holidays and events You can visit us and try the most delicious types of drinks and oriental cuisine, we are honored to visit you.</p>
+                        <p>We have an integrated staff that serves you all the time with the presence of distinctive and calm music, we are distinguished by the accuracy of our work and our speed of completion with five stars</p>
                         <a href="#" class="btn btn-secondary">LEARN MORE</a>
                     </div>
                     <img src="./img/about_img.png" alt="Pizza">
